--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -26,7 +26,7 @@
     <main>
         <section id="home">
             <div class="home-content">
-                <h1>Welcome to Turbo BCH PG Accommodation</h1>
+                <h1>Welcome to laundry service for turno bch PG</h1>
                 <p>Experience comfort and convenience with our top-notch services and facilities.</p>
             </div>
         </section>
